DPNG-5617 Allow Consul HTTP API traffic
